<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Any Player</string>
    <string name="playback_channel_name">Any Player Playback</string>
</resources>
